Configure SonarCloud and Coveralls, fix mutation coverage